--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-﻿################################################################################
-# Данный GITIGNORE-файл был автоматически создан Microsoft(R) Visual Studio.
-################################################################################
-
-*.suo
+﻿*.suo
+bin/
+obj/
+/packages/
+.idea/*
+.vs/*
